--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://GisVoyager.github.io/Website/",
+  "homepage": "https://GisVoyager.github.io/website/",
   "name": "app",
   "private": true,
   "version": "0.0.0",
